# zsh-llm-suggestions

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  MLX_README.md  README.md  TODO.md  main.py  pyproject.toml  zsh-llm-suggestions-lmstudio.py  zsh-llm-suggestions-mlx.py  zsh-llm-suggestions-ollama.py  zsh-llm-suggestions-openai.py  zsh-llm-suggestions.zsh
