[project]
name = "zsh-llm-suggestions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygments>=2.19.2",
]
[project.optional-dependencies]
ollama_option = [
    "ollama>=0.5.4",
]
mlx_option = [
    "mlx-lm>=0.27.1",
]
openai_option = [
    "openai>=1.109.1",
]
[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "pre-commit>=4.3.0",
    "pre-commit-hooks>=6.0.0",
]
